--- a/_posts/2019-10-31-summary.md
+++ b/_posts/2019-10-31-summary.md
@@ -1,3 +1,8 @@
+---
+layout: post
+author: qinyu
+---
+
 skyer:【陈桂鹏 – CAC培训打结 20191031】
 1. 学习了持续交付与质量内建，掌握了包括流水线、代码检视、测试驱动开发等流程；
 2. ​首次体验了测试驱动开发的方式，这种方式是非常利于编写简洁、高质量的代码的；
@@ -66,8 +71,8 @@ Kuiper:【CAC培训打结 20191031 李景海】
 2. ​通过TDD 测试驱动开发和结对编程，学习了一种新的开发模式，对开发和测试有了新的认识
 
 yao:【CAC培训打结 20191031 姚伟和】
-1.TDD的开发模式，整体来说对开发的要求更高，测试驱动程序，在实践中用起来需要不少的实践。
-2.开源框架是把利器，能有效提高开发效率，利弊各有，需要甄别
+1. TDD的开发模式，整体来说对开发的要求更高，测试驱动程序，在实践中用起来需要不少的实践。
+2. 开源框架是把利器，能有效提高开发效率，利弊各有，需要甄别
 
 刘剑:[CAC培训打结 20191031 刘剑]
 1. TDD 从听说到亲自实践，确实感觉有很大的优势。首先从测试的角度考虑就抓住了需求的重点，然后在一步步写测试代码时，会进一步细化对需求的理解，这样再写实现代码，就不会出现很大的冗余了，测试也显得更加有价值，并且也是后期代码重构结果正确与否的强有力保证；
