--- a/_posts/2019-11-01-summary.md
+++ b/_posts/2019-11-01-summary.md
@@ -1,3 +1,8 @@
+---
+layout: post
+author: qinyu
+---
+
 skyer:【陈桂鹏 – CAC培训打结 20191101】
 1. ATDD： 通过生动形象的小游戏以及实际演练，理解与熟悉了其的整个流程以及和TDD的区别；
 2. 代码整洁： ​干净代码的代码既有利于提高代码质量，也有助于提升项目效率；
