--- a/_posts/2019-10-31-summary.md
+++ b/_posts/2019-10-31-summary.md
@@ -19,7 +19,7 @@ skyer:【陈桂鹏 – CAC培训打结 20191031】
 2. ​之前一直有听说TDD，今天首次体验了TDD和结对编程，体验到了一种全新的工作方式，对敏捷有了深入的体会，也意识到自己在代码编程、单元测试方面需要更加努力深入的学习。
 
 熊平:【JellyBean】【熊平 – CAC培训打结 20191031】
-1。 学习了解了TDD流程，认识到这种方式对于代码质量能有较好的提升。同时也了解到自己对于自动化测试相关技术的不足，今后要加强这块的训练。
+1. 学习了解了TDD流程，认识到这种方式对于代码质量能有较好的提升。同时也了解到自己对于自动化测试相关技术的不足，今后要加强这块的训练。
 2. 认识到自己对于新技术落地使用上的不足，​今后在新技术的学习不能只停留在了解层面，一定要做到落地执行。
 
 何清丰:【何清丰 – CAC培训打结 20191031】
